--- a/proj2/mm1-queue-finte-queue-simulation.ipynb
+++ b/proj2/mm1-queue-finte-queue-simulation.ipynb
@@ -2,24 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simple queue system model:mu = 1\n",
-      "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Theoretical\n",
-      "0.200     200377    0.000     15.023    1.251     0.867     1.254     0.200     1.250    \n",
-      "0.400     400070    0.000     18.180    1.658     1.146     1.660     0.399     1.667    \n",
-      "0.600     601173    0.000     30.204    2.529     1.749     2.539     0.603     2.500    \n",
-      "0.800     799713    0.000     54.270    4.996     3.452     4.988     0.800     5.000    \n"
+      "Simple queue system model:mu = 1, buffer size = 10\n",
+      "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
+      "0.9999999795200002\n",
+      "0.200     200377    0.000     15.023    1.251     0.867     1.254     0.200     0.000     0.000    \n",
+      "0.99995805696\n",
+      "0.400     401172    0.000     23.096    1.664     1.154     1.660     0.402     0.000     0.000    \n",
+      "0.99637202944\n",
+      "0.600     599482    0.000     24.461    2.455     1.730     2.375     0.601     0.003     0.004    \n",
+      "0.9141006540800001\n",
+      "0.800     781331    0.000     30.045    3.790     2.954     3.200     0.781     0.023     0.086    \n",
+      "0.6861894039099998\n",
+      "0.900     854259    0.000     32.460    4.640     3.931     3.528     0.854     0.051     0.314    \n",
+      "0.10466174574128366\n",
+      "0.990     905912    0.000     27.556    5.389     4.887     3.687     0.904     0.085     0.895    \n",
+      "Simple queue system model:mu = 1, buffer size = 50\n",
+      "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
+      "1.0000000000000004\n",
+      "0.200     199916    0.000     14.758    1.241     0.859     1.244     0.199     0.000     -0.000   \n",
+      "1.0\n",
+      "0.400     400067    0.000     26.712    1.664     1.152     1.666     0.399     0.000     0.000    \n",
+      "0.9999999999951504\n",
+      "0.600     599600    0.000     30.476    2.491     1.733     2.477     0.599     0.000     0.000    \n",
+      "0.9999885820184579\n",
+      "0.800     801180    0.000     48.397    4.976     3.456     4.933     0.801     0.000     0.000    \n",
+      "0.995361602313412\n",
+      "0.900     898139    0.000     68.222    9.539     6.721     9.105     0.897     0.000     0.005    \n",
+      "0.401043993533839\n",
+      "0.990     974218    0.000     79.242    23.823    22.600    15.271    0.975     0.016     0.599    \n"
      ]
     }
    ],
    "source": [
     "# This is a simpy based  simulation of a M/M/1 queue system\n",
+    "# Now the buffer packet size is limited to B\n",
     "\n",
     "import random\n",
     "import simpy\n",
@@ -33,7 +56,7 @@
     "\n",
     "\"\"\" Queue system  \"\"\"\t\t\n",
     "class server_queue:\n",
-    "\tdef __init__(self, env, arrival_rate, Packet_Delay, Server_Idle_Periods):\n",
+    "\tdef __init__(self, env, arrival_rate, Packet_Delay, Server_Idle_Periods, Buffer_Size):\n",
     "\t\tself.server = simpy.Resource(env, capacity = 1)\n",
     "\t\tself.env = env\n",
     "\t\tself.queue_len = 0\n",
@@ -41,10 +64,14 @@
     "\t\tself.packet_number = 0\n",
     "\t\tself.sum_time_length = 0\n",
     "\t\tself.start_idle_time = 0\n",
+    "\t\tself.drop = 0\n",
+    "\t\tself.buffer_size = Buffer_Size\n",
     "\t\tself.arrival_rate = arrival_rate\n",
     "\t\tself.Packet_Delay = Packet_Delay\n",
     "\t\tself.Server_Idle_Periods = Server_Idle_Periods\n",
     "\t\t\n",
+    "\tdef drop_rate(self):\n",
+    "\t\treturn self.drop/self.packet_number\n",
     "\tdef process_packet(self, env, packet):\n",
     "\t\twith self.server.request() as req:\n",
     "\t\t\tstart = env.now\n",
@@ -65,7 +92,6 @@
     "\t\t     # Infinite loop for generating packets\n",
     "\t\t\tyield env.timeout(random.expovariate(self.arrival_rate))\n",
     "\t\t\t  # arrival time of one packet\n",
-    "\n",
     "\t\t\tself.packet_number += 1\n",
     "\t\t\t  # packet id\n",
     "\t\t\tarrival_time = env.now  \n",
@@ -76,8 +102,11 @@
     "\t\t\t\tidle_period = env.now - self.start_idle_time\n",
     "\t\t\t\tself.Server_Idle_Periods.addNumber(idle_period)\n",
     "\t\t\t\t#print(\"Idle period of length {0} ended\".format(idle_period))\n",
-    "\t\t\tself.queue_len += 1\n",
-    "\t\t\tenv.process(self.process_packet(env, new_packet))\n",
+    "\t\t\tif self.queue_len == self.buffer_size:#drop packet\n",
+    "\t\t\t\tself.drop += 1\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tself.queue_len += 1\n",
+    "\t\t\t\tenv.process(self.process_packet(env, new_packet))\n",
     "\t\n",
     "\n",
     "\"\"\" Packet class \"\"\"\t\t\t\n",
@@ -126,31 +155,40 @@
     "        sum = sum/(len(self.dataset) - 1)\n",
     "        return math.sqrt(sum)\n",
     "\n",
+    "def cal_packet_loss(arrival_rate, buffer_size):\n",
+    "    Sum = 0\n",
+    "    for i in range(0, buffer_size + 1):\n",
+    "        Sum += ((1-arrival_rate/MU) * math.pow((arrival_rate/MU),i))\n",
+    "    print(Sum)\n",
+    "    \n",
+    "    return (1-Sum)\n",
     "\n",
     "def main():\n",
-    "\tprint(\"Simple queue system model:mu = {0}\".format(MU))\n",
-    "\tprint (\"{0:<9} {1:<9} {2:<9} {3:<9} {4:<9} {5:<9} {6:<9} {7:<9} {8:<9}\".format(\n",
-    "        \"Lambda\", \"Count\", \"Min\", \"Max\", \"Mean\", \"Median\", \"Sd\", \"Utilization\", \"Theoretical\"))\n",
-    "\trandom.seed(RANDOM_SEED)\n",
-    "\tfor arrival_rate in [0.2, 0.4, 0.6, 0.8, 0.9, 0.99]:\n",
-    "\t\tenv = simpy.Environment()\n",
-    "\t\tPacket_Delay = StatObject()\n",
-    "\t\tServer_Idle_Periods = StatObject()\n",
-    "\t\trouter = server_queue(env, arrival_rate, Packet_Delay, Server_Idle_Periods)\n",
-    "\t\tenv.process(router.packets_arrival(env))\n",
-    "\t\tenv.run(until=SIM_TIME)\n",
-    "\t\texpected_delay = 1/MU/(1-(arrival_rate/MU))\n",
-    "\t\tprint (\"{0:<9.3f} {1:<9} {2:<9.3f} {3:<9.3f} {4:<9.3f} {5:<9.3f} {6:<9.3f} {7:<9.3f} {8:<9.3f}\".format(\n",
-    "\t\t\tround(arrival_rate, 3),\n",
-    "\t\t\tint(Packet_Delay.count()),\n",
-    "\t\t\tround(Packet_Delay.minimum(), 3),\n",
-    "\t\t\tround(Packet_Delay.maximum(), 3),\n",
-    "\t\t\tround(Packet_Delay.mean(), 3),\n",
-    "\t\t\tround(Packet_Delay.median(), 3),\n",
-    "\t\t\tround(Packet_Delay.standarddeviation(), 3),\n",
-    "\t\t\tround(1-Server_Idle_Periods.sum()/SIM_TIME, 3),\n",
-    "\t\t\texpected_delay))\n",
-    "\t\n",
+    "    random.seed(RANDOM_SEED)\n",
+    "    for buffer_size in [10, 50]:\n",
+    "        print(\"Simple queue system model:mu = {0}, buffer size = {1}\".format(MU, buffer_size))\n",
+    "        print (\"{0:<9} {1:<9} {2:<9} {3:<9} {4:<9} {5:<9} {6:<9} {7:<9} {8:<9} {9:<9}\".format(\n",
+    "        \"Lambda\", \"Count\", \"Min\", \"Max\", \"Mean\", \"Median\", \"Sd\", \"Utilization\", \"Loss Rate\", \"Theoretical\"))\n",
+    "        for arrival_rate in [0.2, 0.4, 0.6, 0.8, 0.9, 0.99]:\n",
+    "            env = simpy.Environment()\n",
+    "            Packet_Delay = StatObject()\n",
+    "            Server_Idle_Periods = StatObject()\n",
+    "            router = server_queue(env, arrival_rate, Packet_Delay, Server_Idle_Periods, buffer_size)\n",
+    "            env.process(router.packets_arrival(env))\n",
+    "            env.run(until=SIM_TIME)\n",
+    "            #expected_delay = 1/MU/(1-(arrival_rate/MU))\n",
+    "            print (\"{0:<9.3f} {1:<9} {2:<9.3f} {3:<9.3f} {4:<9.3f} {5:<9.3f} {6:<9.3f} {7:<9.3f} {8:<9.3f} {9:<9.3f}\".format(\n",
+    "                round(arrival_rate, 3),\n",
+    "                int(Packet_Delay.count()),\n",
+    "                round(Packet_Delay.minimum(), 3),\n",
+    "                round(Packet_Delay.maximum(), 3),\n",
+    "                round(Packet_Delay.mean(), 3),\n",
+    "                round(Packet_Delay.median(), 3),\n",
+    "                round(Packet_Delay.standarddeviation(), 3),\n",
+    "                round(1-Server_Idle_Periods.sum()/SIM_TIME, 3),\n",
+    "                round(router.drop_rate(),3),\n",
+    "                round(cal_packet_loss(arrival_rate, buffer_size),3)))\n",
+    "\n",
     "if __name__ == '__main__': main()"
    ]
   },
@@ -158,8 +196,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
