--- a/proj2/mm1-queue-finte-queue-simulation.ipynb
+++ b/proj2/mm1-queue-finte-queue-simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,32 +11,20 @@
      "text": [
       "Simple queue system model:mu = 1, buffer size = 10\n",
       "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
-      "0.9999999795200002\n",
       "0.200     200377    0.000     15.023    1.251     0.867     1.254     0.200     0.000     0.000    \n",
-      "0.99995805696\n",
       "0.400     401172    0.000     23.096    1.664     1.154     1.660     0.402     0.000     0.000    \n",
-      "0.99637202944\n",
-      "0.600     599482    0.000     24.461    2.455     1.730     2.375     0.601     0.003     0.004    \n",
-      "0.9141006540800001\n",
-      "0.800     781331    0.000     30.045    3.790     2.954     3.200     0.781     0.023     0.086    \n",
-      "0.6861894039099998\n",
-      "0.900     854259    0.000     32.460    4.640     3.931     3.528     0.854     0.051     0.314    \n",
-      "0.10466174574128366\n",
-      "0.990     905912    0.000     27.556    5.389     4.887     3.687     0.904     0.085     0.895    \n",
+      "0.600     599482    0.000     24.461    2.455     1.730     2.375     0.601     0.003     0.002    \n",
+      "0.800     781331    0.000     30.045    3.790     2.954     3.200     0.781     0.023     0.023    \n",
+      "0.900     854259    0.000     32.460    4.640     3.931     3.528     0.854     0.051     0.051    \n",
+      "0.990     905912    0.000     27.556    5.389     4.887     3.687     0.904     0.085     0.086    \n",
       "Simple queue system model:mu = 1, buffer size = 50\n",
       "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
-      "1.0000000000000004\n",
-      "0.200     199916    0.000     14.758    1.241     0.859     1.244     0.199     0.000     -0.000   \n",
-      "1.0\n",
+      "0.200     199916    0.000     14.758    1.241     0.859     1.244     0.199     0.000     0.000    \n",
       "0.400     400067    0.000     26.712    1.664     1.152     1.666     0.399     0.000     0.000    \n",
-      "0.9999999999951504\n",
       "0.600     599600    0.000     30.476    2.491     1.733     2.477     0.599     0.000     0.000    \n",
-      "0.9999885820184579\n",
       "0.800     801180    0.000     48.397    4.976     3.456     4.933     0.801     0.000     0.000    \n",
-      "0.995361602313412\n",
-      "0.900     898139    0.000     68.222    9.539     6.721     9.105     0.897     0.000     0.005    \n",
-      "0.401043993533839\n",
-      "0.990     974218    0.000     79.242    23.823    22.600    15.271    0.975     0.016     0.599    \n"
+      "0.900     898139    0.000     68.222    9.539     6.721     9.105     0.897     0.000     0.001    \n",
+      "0.990     974218    0.000     79.242    23.823    22.600    15.271    0.975     0.016     0.015    \n"
      ]
     }
    ],
@@ -70,8 +58,9 @@
     "\t\tself.Packet_Delay = Packet_Delay\n",
     "\t\tself.Server_Idle_Periods = Server_Idle_Periods\n",
     "\t\t\n",
-    "\tdef drop_rate(self):\n",
+    "\tdef drop_rate(self):######calculate the drop rate-   drop/total_packets\n",
     "\t\treturn self.drop/self.packet_number\n",
+    "    \n",
     "\tdef process_packet(self, env, packet):\n",
     "\t\twith self.server.request() as req:\n",
     "\t\t\tstart = env.now\n",
@@ -102,12 +91,12 @@
     "\t\t\t\tidle_period = env.now - self.start_idle_time\n",
     "\t\t\t\tself.Server_Idle_Periods.addNumber(idle_period)\n",
     "\t\t\t\t#print(\"Idle period of length {0} ended\".format(idle_period))\n",
-    "\t\t\tif self.queue_len == self.buffer_size:#drop packet\n",
-    "\t\t\t\tself.drop += 1\n",
-    "\t\t\telse:\n",
+    "\t\t\tif self.queue_len < self.buffer_size:#######drop packet\n",
     "\t\t\t\tself.queue_len += 1\n",
     "\t\t\t\tenv.process(self.process_packet(env, new_packet))\n",
-    "\t\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tself.drop += 1\n",
+    "\n",
     "\n",
     "\"\"\" Packet class \"\"\"\t\t\t\n",
     "class Packet:\n",
@@ -155,13 +144,11 @@
     "        sum = sum/(len(self.dataset) - 1)\n",
     "        return math.sqrt(sum)\n",
     "\n",
-    "def cal_packet_loss(arrival_rate, buffer_size):\n",
-    "    Sum = 0\n",
-    "    for i in range(0, buffer_size + 1):\n",
-    "        Sum += ((1-arrival_rate/MU) * math.pow((arrival_rate/MU),i))\n",
-    "    print(Sum)\n",
+    "def cal_packet_loss(arrival_rate, buffer_size):#######the theoretical loss rate\n",
+    "    pd = 1 - (1 - (arrival_rate/MU)**buffer_size)/(1 - (arrival_rate/MU)**(buffer_size+1))\n",
+    "    #print(Sum)###########each step print out the calculated probability that the packet of system is <= buffer size\n",
     "    \n",
-    "    return (1-Sum)\n",
+    "    return pd\n",
     "\n",
     "def main():\n",
     "    random.seed(RANDOM_SEED)\n",
@@ -193,12 +180,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   },
   {
