--- a/proj2/finite-buffer.ipynb
+++ b/proj2/finite-buffer.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -11,20 +13,20 @@
      "text": [
       "Simple queue system model:mu = 1, buffer size = 10\n",
       "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
-      "0.200     200377    0.000     15.023    1.251     0.867     1.254     0.200     0.000     0.000    \n",
-      "0.400     401172    0.000     23.096    1.664     1.154     1.660     0.402     0.000     0.000    \n",
-      "0.600     599482    0.000     24.461    2.455     1.730     2.375     0.601     0.003     0.002    \n",
-      "0.800     781331    0.000     30.045    3.790     2.954     3.200     0.781     0.023     0.023    \n",
-      "0.900     854259    0.000     32.460    4.640     3.931     3.528     0.854     0.051     0.051    \n",
-      "0.990     905912    0.000     27.556    5.389     4.887     3.687     0.904     0.085     0.086    \n",
+      "0.200     200377    0.000     15.023    1.251     0.867     1.254     0.200     0.00000   0.00000  \n",
+      "0.400     399774    0.000     19.706    1.655     1.144     1.658     0.399     0.00003   0.00003  \n",
+      "0.600     600324    0.000     26.514    2.495     1.737     2.448     0.602     0.00174   0.00145  \n",
+      "0.800     785589    0.000     31.911    3.966     3.068     3.386     0.786     0.01811   0.01845  \n",
+      "0.900     860391    0.000     34.938    4.969     4.194     3.796     0.860     0.04418   0.04373  \n",
+      "0.990     912681    0.000     30.296    5.897     5.389     3.989     0.912     0.07926   0.07880  \n",
       "Simple queue system model:mu = 1, buffer size = 50\n",
       "Lambda    Count     Min       Max       Mean      Median    Sd        Utilization Loss Rate Theoretical\n",
-      "0.200     199916    0.000     14.758    1.241     0.859     1.244     0.199     0.000     0.000    \n",
-      "0.400     400067    0.000     26.712    1.664     1.152     1.666     0.399     0.000     0.000    \n",
-      "0.600     599600    0.000     30.476    2.491     1.733     2.477     0.599     0.000     0.000    \n",
-      "0.800     801180    0.000     48.397    4.976     3.456     4.933     0.801     0.000     0.000    \n",
-      "0.900     898139    0.000     68.222    9.539     6.721     9.105     0.897     0.000     0.001    \n",
-      "0.990     974218    0.000     79.242    23.823    22.600    15.271    0.975     0.016     0.015    \n"
+      "0.200     200093    0.000     14.758    1.241     0.859     1.244     0.199     0.00000   0.00000  \n",
+      "0.400     400168    0.000     26.712    1.666     1.154     1.668     0.399     0.00000   0.00000  \n",
+      "0.600     599717    0.000     30.476    2.491     1.734     2.474     0.599     0.00000   0.00000  \n",
+      "0.800     801115    0.000     48.397    4.981     3.458     4.937     0.801     0.00000   0.00000  \n",
+      "0.900     897903    0.000     77.005    9.555     6.717     9.152     0.897     0.00029   0.00047  \n",
+      "0.990     974599    0.000     80.541    24.022    22.694    15.528    0.976     0.01552   0.01472  \n"
      ]
     }
    ],
@@ -91,7 +93,7 @@
     "\t\t\t\tidle_period = env.now - self.start_idle_time\n",
     "\t\t\t\tself.Server_Idle_Periods.addNumber(idle_period)\n",
     "\t\t\t\t#print(\"Idle period of length {0} ended\".format(idle_period))\n",
-    "\t\t\tif self.queue_len < self.buffer_size:#######drop packet\n",
+    "\t\t\tif self.queue_len <= self.buffer_size:#######drop packet\n",
     "\t\t\t\tself.queue_len += 1\n",
     "\t\t\t\tenv.process(self.process_packet(env, new_packet))\n",
     "\t\t\telse:\n",
@@ -145,7 +147,7 @@
     "        return math.sqrt(sum)\n",
     "\n",
     "def cal_packet_loss(arrival_rate, buffer_size):#######the theoretical loss rate\n",
-    "    pd = 1 - (1 - (arrival_rate/MU)**buffer_size)/(1 - (arrival_rate/MU)**(buffer_size+1))\n",
+    "    pd = 1 - (1 - (arrival_rate/MU)**(buffer_size+1))/(1 - (arrival_rate/MU)**(buffer_size+2))\n",
     "    #print(Sum)###########each step print out the calculated probability that the packet of system is <= buffer size\n",
     "    \n",
     "    return pd\n",
@@ -164,7 +166,7 @@
     "            env.process(router.packets_arrival(env))\n",
     "            env.run(until=SIM_TIME)\n",
     "            #expected_delay = 1/MU/(1-(arrival_rate/MU))\n",
-    "            print (\"{0:<9.3f} {1:<9} {2:<9.3f} {3:<9.3f} {4:<9.3f} {5:<9.3f} {6:<9.3f} {7:<9.3f} {8:<9.3f} {9:<9.3f}\".format(\n",
+    "            print (\"{0:<9.3f} {1:<9} {2:<9.3f} {3:<9.3f} {4:<9.3f} {5:<9.3f} {6:<9.3f} {7:<9.3f} {8:<9.5f} {9:<9.5f}\".format(\n",
     "                round(arrival_rate, 3),\n",
     "                int(Packet_Delay.count()),\n",
     "                round(Packet_Delay.minimum(), 3),\n",
@@ -173,8 +175,8 @@
     "                round(Packet_Delay.median(), 3),\n",
     "                round(Packet_Delay.standarddeviation(), 3),\n",
     "                round(1-Server_Idle_Periods.sum()/SIM_TIME, 3),\n",
-    "                round(router.drop_rate(),3),\n",
-    "                round(cal_packet_loss(arrival_rate, buffer_size),3)))\n",
+    "                round(router.drop_rate(),5),\n",
+    "                round(cal_packet_loss(arrival_rate, buffer_size),5)))\n",
     "\n",
     "if __name__ == '__main__': main()"
    ]
