--- a/proj2/finite-buffer.ipynb
+++ b/proj2/finite-buffer.ipynb
@@ -34,6 +34,9 @@
     "# This is a simpy based  simulation of a M/M/1 queue system\n",
     "# Now the buffer packet size is limited to B\n",
     "\n",
+    "#  Weiran Guo(912916431)\n",
+    "#  Siqi Pi(912421900)\n",
+    "\n",
     "import random\n",
     "import simpy\n",
     "import math\n",
